vehicle/tests/golden/error/dataset/mismatchedDimensions/mismatchedDimensions.vcl
-- Test passes dataset of type Vector Nat 4
@dataset
trainingDataset : Vector (Vector Nat 4) 4
